testcases/pos/eval_type/double_fun_path_no_fail.bard
let fun g(x: Int): Int = x + f()
	fun f(): Int = 42
    val x = 3 raisedTo {secret}
    val y = g(x)
in
	send 42
end
