testcases/neg/eval_type/call_args_type_can_fail_does_fail.bard
let fun f(x: Int) = x
    val x = (if false then 1 else true) raisedTo {secret}
    val y = f(x)
in
    send 42
end
